--- a/index.ipynb
+++ b/index.ipynb
@@ -427,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(countries)"
+    "unique_countries = lset(countries)"
    ]
   },
   {
